# ml-ai-insight

./: .gitignore  PROJECT_EXPLANATION.md  README.md  docker-compose.yml
.github/actions/digicert-code-scan/: action.yml
.github/workflows/: release-security.yml
api-service/: Dockerfile  build.gradle
ml-pipeline/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg
ml-pipeline/config/: db_config.yaml  features.yaml  model_config.yaml
ml-pipeline/scripts/: explain.py  ingest.py  predict.py  train.py
ml-pipeline/src/vuln_insight/: __init__.py
ml-pipeline/src/vuln_insight/data/: csv_loader.py  db_loader.py  json_ingester.py  sample_data.py  transformers.py
ml-pipeline/src/vuln_insight/features/: cve_core.py  cwe_intelligence.py  dependency.py  pipeline.py  repo_behavior.py  text_embeddings.py  time_exposure.py  user_behavior.py
ml-pipeline/src/vuln_insight/llm/: bedrock_client.py  insight_generator.py  prompt_templates.py
ml-pipeline/src/vuln_insight/scoring/: hybrid_scorer.py  tier_classifier.py
ml-pipeline/src/vuln_insight/serving/: app.py  dashboard_api.py
ml-pipeline/src/vuln_insight/training/: evaluator.py  explainer.py  trainer.py
ml-pipeline/src/vuln_insight/utils/: cvss_parser.py
ui/: Dockerfile  nginx.conf  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.css  App.js
ui/src/components/: AiInsights.js  Header.js  PortfolioInsights.js  ReleaseComparison.js  RiskHistogram.js  SummaryCards.js  TierChart.js  TopRepos.js  UploadPanel.js  VulnDetail.js  VulnTable.js
ui/src/services/: api.js
(+12 files in other folders)
